testing/macro-tests/tests/ui/generated_requires_many_ulid.stderr
error: generated(insert = ...) currently supports only single-value fields
  --> tests/ui/generated_requires_many_ulid.rs:23:21
   |
23 |             ident = "tokens",
   |                     ^^^^^^^^
